--- a/pit/templates/pit/kzt_list.html
+++ b/pit/templates/pit/kzt_list.html
@@ -1,14 +1,34 @@
+﻿{% load staticfiles %}
 <html>
     <head>
-        <title>Transactions</title>
-    </head>
+       <title>Transactions</title>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+       <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css"> 
+       <link rel="stylesheet" href="{% static 'css/pit.css' %}">
+       </head>
     <body>
-{% for Transaction in transactions %}
-    <div>
-        <p>published: {{ Transaction.date }}</p>
-        <h1><a href="">{{ Transaction.amount }}</a></h1>
-        <p>{{ Transaction.description|linebreaksbr }}</p>
-    </div>
+<div class="page-header">
+    <h1><center>History of transactions</center></h1>
+</div>
+<div>
+<table class="table" style="width: 80%"; align="center">
+   <thead class="thead-dark">
+    <tr>
+        <th>Дата</th>
+        <th>Описание</th>
+        <th>Сумма</a></th>
+    </tr>
+   </thead>
+   <tbody>
+{% for Transaction in transactions %}    
+    <tr class="p-3 mb-2 {% if Transaction.amount < 0 %} bg-danger text-white  {% endif %}">
+        <th>{{ Transaction.date }}</th>
+        <th>{{ Transaction.description|linebreaksbr }}</th>
+        <th style = "text-align: right">{{ Transaction.amount }}</th>
+    </tr>
 {% endfor %}
+    </tbody>
+</table>
+</div>
     </body>
 </html>
