--- a/pit/templates/pit/index.html
+++ b/pit/templates/pit/index.html
@@ -13,6 +13,8 @@
 
 <div class="page-header">
     <h1><center>Dogs</center></h1>
+</div>
+<div class="main">
 <div style="display:flex; flex-wrap: wrap; flow-direction: row">
 {% for Dog in dogs %}
 <div class="mdc-card  mdc-card--theme-dark demo-card demo-card--bg-demo" style="height: 350px; width: 400px; margin: 2em;
@@ -24,20 +26,15 @@
               <h1 class="mdc-card__title mdc-card__title--large">{{ Dog.name }}</h1>
               <h2 class="mdc-card__subtitle">{{Dog.description}}</h2>
             </section>
-            <section class="mdc-card__actions" style="background: rgba(0, 0, 0, .4); display: block">
-              <button class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action">Action 1</button>
-              <button class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action" style= "float: right">Action 2</button>
+            <section class="mdc-card__actions" style="background: rgba(0, 0, 0, .4); display: block;">
+              <button class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action"><font color="#D3D3D3"><strong>Купить собаку</font></button>
+              <button class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action" style= "float: right"><font color="#D3D3D3"><strong>Донат</font></button>
             </section>
           </div>
 {% endfor %}
 </div>	
-    <button type="button" class="mdc-button mdc-button--raised">
-      Press Me
-    </button>
-    <a href="{% url "kzt_list" %}">See transactions</a>
-</div>
-<div>
-{{dogs}}
+    <a class="btn btn-dark" href="{% url "kzt_list" %}" role="button" style="margin: 2em">See transactions</a>
+    <a href="{% url 'dog_new' %}" class = "btn btn-success"><span class="glyphicon glyphicon-plus"></span><strong>+</strong> Add dog</a>
 </div>
     </body>
 </html>
