add donate to transaction page final version

--- a/pit/templates/pit/kzt_list.html
+++ b/pit/templates/pit/kzt_list.html
@@ -11,7 +11,7 @@
        </head>
     <body>
 <div class="page-header">
-        <h1><center>History of transactions</center></h1>
+        <h1><center>History of transactions {{ username }}</center></h1>
 </div>
 <div>
 <table class="table" style="width: 80%"; align="center">
