--- a/pit/static/css/pit.css
+++ b/pit/static/css/pit.css
@@ -10,6 +10,14 @@
     text-decoration: none;
 }
 
+.log {
+  margin-left: 80%;
+  background-color: white;
+  height: 100%;
+  width: 20%;
+  position: absolute;
+}
+
 .content {
     margin-left: 40px;
 }
