--- a/pit/templates/pit/kzt_list.html
+++ b/pit/templates/pit/kzt_list.html
@@ -11,7 +11,9 @@
        </head>
     <body>
 <div class="page-header">
-        <h1><center>History of transactions {{ username }}</center></h1>
+        <h1><center>History of transactions <h3>{{ username }}</h3></center></h1>
+<a style="margin-right: 0;" class="btn btn-dark" href="{% url "login" %}" role="button" style="margin: 2em">Log in</a>
+{% if username != "" %}<a style="margin-right: 0;" class="btn btn-dark" href="{% url "logout" %}" role="button" style="margin: 2em">Log out</a> {% endif %}
 </div>
 <div>
 <table class="table" style="width: 80%"; align="center">
@@ -33,7 +35,7 @@
     </tbody>
 </table>
 <a class="btn btn-dark" href="{% url "index" %}" role="button" style="margin-left: 10em;">Main page</a>
-<a href="{% url 'transaction_new' %}" class = "btn btn-success"><span class="glyphicon glyphicon-plus"></span><strong>+</strong> Add transaction</a>
+{% if username != "" %}<a href="{% url 'transaction_new' %}" class = "btn btn-success"><span class="glyphicon glyphicon-plus"></span><strong>+</strong> Add transaction</a> {% endif %}
 </div>
     </body>
 </html>
