--- a/pit/templates/pit/index.html
+++ b/pit/templates/pit/index.html
@@ -1,4 +1,4 @@
-﻿{% load staticfiles %}
+{% load staticfiles %}
 <html>
     <head>
        <title>Main</title>
@@ -12,31 +12,16 @@
     <body>
 
 <div class="page-header">
-    <h1><center>Dogs <h3>{{ username }}</h3> </center></h1>
+    <h1><center>Welcome to Main page <h3>{{ username }}</h3> </center></h1>
 {% if username == "" %}<a style="margin-right: 0;" class="btn btn-dark" href="{% url "login" %}" role="button" style="margin: 2em">Log in</a> {% endif %}
 {% if username != "" %}<a style="margin-right: 0;" class="btn btn-dark" href="{% url "logout" %}" role="button" style="margin: 2em">Log out</a> {% endif %}
 </div>
 <div class="main">
-<div style="display:flex; flex-wrap: wrap; flow-direction: row">
-{% for Dog in dogs %}
-<div class="mdc-card  mdc-card--theme-dark demo-card demo-card--bg-demo" style="height: 350px; width: 400px; margin: 2em;
-    background-image: url({{ Dog.url }});
-    background-size:  cover;
-    background-repeat: no-repeat;
-    display: flex">
-            <section class="mdc-card__primary" style="background: rgba(0, 0, 0, .4);">
-              <h1 class="mdc-card__title mdc-card__title--large">{{ Dog.name }}</h1>
-              <h2 class="mdc-card__subtitle">{{Dog.description}}</h2>
-            </section>
-            <section class="mdc-card__actions" style="background: rgba(0, 0, 0, .4); display: block;">
-              <button class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action"><font color="#D3D3D3"><strong>Купить собаку</font></button>
-              <button class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action" style= "float: right"><font color="#D3D3D3"><strong>Донат</font></button>
-            </section>
-          </div>
-{% endfor %}
-</div>	
+    <a class="btn btn-dark" href="{% url "dog" %}" role="button" style="margin: 2em">Dogs</a>
+    <a class="btn btn-dark" href="{% url "cat" %}" role="button" style="margin: 2em">Cats</a>
+    <a class="btn btn-dark" href="{% url "otherPets" %}" role="button" style="margin: 2em">Other Pets</a>
     <a class="btn btn-dark" href="{% url "kzt_list" %}" role="button" style="margin: 2em">See transactions</a>
-   {% if username != "" %}<a href="{% url 'dog_new' %}" class = "btn btn-success"><span class="glyphicon glyphicon-plus"></span><strong>+</strong> Add dog</a> {% endif %}
-</div>
+    <a class = "btn btn-success" href="{% url "kkb_init" %}" role="button" style="margin: 2em">Donate</a>
+</div>	
     </body>
 </html>
