--- a/pit/static/css/pit.css
+++ b/pit/static/css/pit.css
@@ -1,62 +1,213 @@
-.page-header {
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
-}
-
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
-    text-decoration: none;
-}
-
-.log {
-  margin-left: 80%;
-  background-color: white;
-  height: 100%;
-  width: 20%;
-  position: absolute;
-}
-
-.content {
-    margin-left: 40px;
-}
-
-h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
-}
-
-.date {
-    color: #828282;
-}
-
-.save {
-    float: right;
-}
-
-.post-form textarea, .post-form input {
-    width: 100%;
-}
-
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
-}
-
-.post {
-    margin-bottom: 70px;
-}
-
-.post h1 a, .post h1 a:visited {
-    color: #000000;
-}
+@import url('https://fonts.googleapis.com/css?family=Istok+Web');
 
 .sky {
- background-image: url("https://psv4.userapi.com/c834704/u59639756/docs/d2/5faef7dc2996/ppbackground2.png?extra=nC95eyYEQIcfhX3dflHS0WDC0nFssH7z7s1GinFvPFabi4e4_BgFV4DSqr3QCUzONu4gXRHw09jxt76CN_xT8Ut1Jl_UclrPuoblWMSa4zIDBKdmUIK9OuzpbH7uTKxgxZIUktdhLCpE"); 
- background-size: cover;
- -moz-background-size: cover; 
-background-repeat: no-repeat;
 height: 100%;
+width: 100%;
+position: absolute;
+left: 0;
+top: 0;
+z-index: 1;
   }
 
+.content {
+position: absolute;
+z-index: 2;
+height: 100%;
+width: 100%;
+margin-top: 0;
+}
+
+#header {
+margin-top: 0;
+width: 100%;
+height: 15%;
+min-height: 50px;
+min-width: 800px;
+}
+a.logo {
+}
+a.logo:link, a.logo:visited {
+    height: 100%;
+    width: 20%;
+    min-width: 70px;
+    text-align: center;
+    padding-top: 2.5%;
+    padding: auto;
+    display: inline-block;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
+    background-color: rgba(230, 240, 255, 0.3);
+    color: white;
+    font-size: 20px;
+    float: left;
+}
+
+a.logo:hover, a.logo:active {
+    background-color: rgba(230, 240, 255, 0.5);
+    color: white;
+}
+
+a.menu:link, a.menu:visited {
+    height: 20%;
+    width: 100%;
+    text-align: center;
+    padding-top: 20px;
+    display: inline-block;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
+    font-size: 20px;
+    color: rgba(230, 240, 255, 0.7);
+}
+
+a.menu:hover, a.menu:active {
+    color: white;
+}
+
+a.dMenu:link, a.dMenu:visited {
+    width: 100%;
+    padding-left: 32%;
+    padding-top: 10px;
+    text-decoration: none;
+    font-size: 20px;
+    color: rgba(230, 240, 255, 0.7);
+    transition: 1s;
+    -webkit-transition: 1s; 
+}
+
+a.dMenu:hover, a.dMenu:active {
+    color: white; 
+}
+
+a.dMenu {
+    display: none;
+}
+
+.dropdown:hover a.dMenu {
+    display: block;
+}
+
+.dropdown {
+    margin-left: 40%;
+    width: 20%;
+    position: absolute;
+}
+
+#text {
+    width: 40%;
+    height: 50%;
+    margin-left: 10%;
+    margin-top: 6%;
+    display: block;
+}
+
+#title {
+    width: 100%;
+    height: 40%;
+    color: rgba(230, 240, 255, 0.9);
+    font-size: 45px;
+    transition: 1s;
+    -webkit-transition: 1s;
+}
+
+#title:hover {
+    color: white;
+}
+
+a.donate:link, a.donate:visited {
+    height: 20%;
+    width: 25%;
+    min-width: 70px;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    padding-top: 4%;
+    padding: auto;
+    display: inline-block;
+    text-decoration: none;
+    background-color: rgba(230, 240, 255, 0.7);
+    color: rgba(77, 166, 255, 0.9);
+    font-size: 20px;
+    float: left;
+    transition: 1s;
+    -webkit-transition: 1s;
+    position: absolute;
+}
+
+a.donate:hover, a.donate:active {
+    background-color: white;
+    color: rgba(77, 166, 255, 1);
+}
+
+a.trans:link, a.trans:visited {
+    height: 100%;
+    width: 20%;
+    text-align: center;
+    padding: 20px;
+    display: inline-block;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
+    font-size: 20px;
+    color: rgba(230, 240, 255, 0.7);
+    margin-left: 40%;
+}
+
+a.trans:hover, a.trans:active {
+    color: white;
+}
+
+a.contacts:link, a.contacts:visited {
+    text-align: center;
+    display: inline-block;
+    padding-top: 20px;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
+    font-size: 20px;
+    color: rgba(230, 240, 255, 0.7);
+    margin-left: 5%;
+}
+
+a.contacts:hover, a.contacts:active {
+    color: white;
+}
+
+a.login:link, a.login:visited {
+    text-align: center;
+    display: inline-block;
+    text-decoration: none;
+    transition: 1s;
+    -webkit-transition: 1s;
+    font-size: 20px;
+    color: rgba(230, 240, 255, 0.7);
+}
+
+a.login:hover, a.login:active {
+    color: white;
+}
+
+html {
+    overflow: hidden;
+}
+
+#maintext {
+    width: 100%;
+    height: 50%;
+    margin-top: 5%;
+    color: rgba(230, 240, 255, 0.9);
+    font-size: 20px;
+    transition: 1s;
+    -webkit-transition: 1s;
+}
+
+#maintext:hover {
+    color: white;
+}
+
+* {
+margin: 0;
+padding: 0;
+font-family: 'Istok Web', sans-serif;
+}
