--- a/pit/static/css/pit.css
+++ b/pit/static/css/pit.css
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Istok+Web');
+#donfr {
+display: none;
+height: 100%;
+width: 100%;
+background-color: rgba(0, 0, 0, 0.5);
+z-index: 20;
+position: absolute;
+}
 
 .sky {
 height: 100%;
@@ -20,26 +28,24 @@ margin-top: 0;
 #header {
 margin-top: 0;
 width: 100%;
-height: 15%;
-min-height: 50px;
-min-width: 800px;
+
 }
 a.logo {
 }
 a.logo:link, a.logo:visited {
-    height: 100%;
-    width: 20%;
-    min-width: 70px;
     text-align: center;
     padding-top: 2.5%;
+    padding-bottom: 2.5%;
     padding: auto;
+    padding-left: 7%;
+    padding-right: 7%;
     display: inline-block;
     text-decoration: none;
     transition: 1s;
     -webkit-transition: 1s;
     background-color: rgba(230, 240, 255, 0.3);
     color: white;
-    font-size: 20px;
+    font-size: 150%;
     float: left;
 }
 
@@ -49,15 +55,13 @@ a.logo:hover, a.logo:active {
 }
 
 a.menu:link, a.menu:visited {
-    height: 20%;
-    width: 100%;
     text-align: center;
     padding-top: 20px;
     display: inline-block;
     text-decoration: none;
     transition: 1s;
     -webkit-transition: 1s;
-    font-size: 20px;
+    font-size: 150%;
     color: rgba(230, 240, 255, 0.7);
 }
 
@@ -66,11 +70,10 @@ a.menu:hover, a.menu:active {
 }
 
 a.dMenu:link, a.dMenu:visited {
-    width: 100%;
     padding-left: 32%;
     padding-top: 10px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 150%;
     color: rgba(230, 240, 255, 0.7);
     transition: 1s;
     -webkit-transition: 1s; 
@@ -90,23 +93,18 @@ a.dMenu {
 
 .dropdown {
     margin-left: 40%;
-    width: 20%;
     position: absolute;
 }
 
 #text {
-    width: 40%;
-    height: 50%;
     margin-left: 10%;
-    margin-top: 6%;
+    margin-top: 10%;
     display: block;
 }
 
 #title {
-    width: 100%;
-    height: 40%;
     color: rgba(230, 240, 255, 0.9);
-    font-size: 45px;
+    font-size: 400%;
     transition: 1s;
     -webkit-transition: 1s;
 }
@@ -116,19 +114,19 @@ a.dMenu {
 }
 
 a.donate:link, a.donate:visited {
-    height: 20%;
-    width: 25%;
-    min-width: 70px;
     text-align: center;
     left: 0;
     bottom: 0;
     padding-top: 4%;
+    padding-bottom: 4%;
+    padding-left: 7%;
+    padding-right: 7%;	
     padding: auto;
     display: inline-block;
     text-decoration: none;
     background-color: rgba(230, 240, 255, 0.7);
     color: rgba(77, 166, 255, 0.9);
-    font-size: 20px;
+    font-size: 150%;
     float: left;
     transition: 1s;
     -webkit-transition: 1s;
@@ -141,15 +139,13 @@ a.donate:hover, a.donate:active {
 }
 
 a.trans:link, a.trans:visited {
-    height: 100%;
-    width: 20%;
     text-align: center;
     padding: 20px;
     display: inline-block;
     text-decoration: none;
     transition: 1s;
     -webkit-transition: 1s;
-    font-size: 20px;
+    font-size: 150%;
     color: rgba(230, 240, 255, 0.7);
     margin-left: 40%;
 }
@@ -165,7 +161,7 @@ a.contacts:link, a.contacts:visited {
     text-decoration: none;
     transition: 1s;
     -webkit-transition: 1s;
-    font-size: 20px;
+    font-size: 150%;
     color: rgba(230, 240, 255, 0.7);
     margin-left: 5%;
 }
@@ -178,9 +174,10 @@ a.login:link, a.login:visited {
     text-align: center;
     display: inline-block;
     text-decoration: none;
+    right: 0px;
     transition: 1s;
     -webkit-transition: 1s;
-    font-size: 20px;
+    font-size: 150%;
     color: rgba(230, 240, 255, 0.7);
 }
 
@@ -193,11 +190,9 @@ html {
 }
 
 #maintext {
-    width: 100%;
-    height: 50%;
     margin-top: 5%;
     color: rgba(230, 240, 255, 0.9);
-    font-size: 20px;
+    font-size: 150%;
     transition: 1s;
     -webkit-transition: 1s;
 }
