--- a/pit/templates/pit/index.html
+++ b/pit/templates/pit/index.html
@@ -13,23 +13,25 @@
 
        <link rel="stylesheet" href="{% static 'css/pit.css' %}">
        <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+       <script src="{% static 'scripts/index.js' %}"></script>
     </head>
 <body>
     <div class="sky">
         <img src="{% static 'pictures/b.png' %}" width="100%" height="100%" alt="">
     </div>
+    <div id="donfr"> <iframe src = "{% url "kkb_init" %}"><a href="#" onclick="x()">закрыть</a> </iframe> </div>
     <div class="content">
         <div class="dropdown">
                 <a class="menu" href=#>
                     Животные
                 </a>
-                <a class="dMenu" href="{% url "dog" %}">
+                <a class="dMenu" href="{% url "pets" pet_type='dog' %}">
                     Собаки
                 </a>
-                <a class="dMenu" href="{% url "cat" %}">
+                <a class="dMenu" href="{% url "pets" pet_type='cat' %}">
                     Кошки
                 </a>
-                <a class="dMenu" href="{% url "otherPets" %}">
+                <a class="dMenu" href="{% url "pets" pet_type='other' %}">
                     Другие
                 </a>   
         </div>
@@ -57,7 +59,8 @@
                 Здесь вы можете помочь и приютить бездомных животных.
             </div>
         </div>
-        <a class="donate" href="{% url "kkb_init" %}">
+        
+        <a class="donate" href="#" onclick="donate()">
             Донат +
         </a>
     </div>	
