--- a/pit/templates/pit/pet_edit_success.html
+++ b/pit/templates/pit/pet_edit_success.html
@@ -10,7 +10,7 @@
     <body>
 	<div class="content">
     		<div class="thanks">
-    		<center>Спасибо! Мы свяжемся с вами в ближайшее время.</center>
+    		<center>Питомец был успешно добавлен!</center>
 		</div>
 	</div>
     </body>
