--- a/pit/templates/pit/transaction_edit.html
+++ b/pit/templates/pit/transaction_edit.html
@@ -1,20 +1,29 @@
 {% load staticfiles %}
-<html>
     <head>
-       <title>Main</title>
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+       <title>Pet_edit</title>
        <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css"> 
-       <link rel="stylesheet" href="{% static 'css/pit.css' %}">
+       <link rel="stylesheet" href="{% static 'css/pet_edit.css' %}">
        <link
       rel="stylesheet"
       href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     </head>
     <body>
-    <h1><center>New transaction</center></h1>
-     <form method="POST" class="transaction-form">{% csrf_token %}
-       {{ form.as_p }}
-        <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span>Save</button>
-        <a class="btn btn-dark" href="{% url "kzt_list" %}" role="button" style="margin: 2em">See transactions</a>
-    </form>
+	<div class="content" style="height: 50%">
+		<div class="text_header">
+    		<center>Добавить транзакцию</center>
+		</div>
+   		<div class="text">
+     		<form method="POST" class="transaction-form">{% csrf_token %}
+       		Описание транзакции:<br> <textarea style="height: 15%; width: 60%; font-size: 100%; text-align: center;" name="description"></textarea><br>
+		<p></p>
+       		Потраченная сумма:<br> <input style="height: 10%; font-size: 100%; text-align: center;" max="0" value="-"type="number" name="amount" step="1000"><br>
+		<p></p>
+        	<center><input type="submit" id="submit" class="sub" value="Сохранить"></center>
+		</form>    		
+		</div>
+	</div>
     </body>
 </html>
+
+
+</div>
