--- a/pit/static/css/pit.css
+++ b/pit/static/css/pit.css
@@ -8,6 +8,13 @@ z-index: 20;
 position: absolute;
 }
 
+iframe.ifr {
+width: 25%;
+height: 25%;
+margin-left: 37.5%;
+margin-top: 15%;
+}
+
 .sky {
 height: 100%;
 width: 100%;
@@ -28,76 +35,6 @@ width: 100%;
 margin-top: 0;
 }
 
-#header {
-margin-top: 0;
-width: 100%;
-
-}
-a.logo {
-}
-a.logo:link, a.logo:visited {
-    text-align: center;
-    padding-top: 2.5%;
-    padding-bottom: 2.5%;
-    padding: auto;
-    padding-left: 7%;
-    padding-right: 7%;
-    display: inline-block;
-    text-decoration: none;
-    transition: 1s;
-    -webkit-transition: 1s;
-    background-color: rgba(230, 240, 255, 0.3);
-    color: white;
-    font-size: 150%;
-    float: left;
-}
-
-a.logo:hover, a.logo:active {
-    background-color: rgba(230, 240, 255, 0.5);
-    color: white;
-}
-
-a.menu:link, a.menu:visited {
-    text-align: center;
-    display: inline-block;
-    text-decoration: none;
-    transition: 1s;
-    -webkit-transition: 1s;
-    font-size: 150%;
-    color: rgba(230, 240, 255, 0.7);
-}
-
-a.menu:hover, a.menu:active {
-    color: white;
-}
-
-a.dMenu:link, a.dMenu:visited {
-    padding-top: 5%;
-    text-decoration: none;
-    font-size: 150%;
-    color: rgba(230, 240, 255, 0.7);
-    transition: 1s;
-    -webkit-transition: 1s; 
-}
-
-a.dMenu:hover, a.dMenu:active {
-    color: white; 
-}
-
-a.dMenu {
-    display: none;
-}
-
-.dropdown:hover a.dMenu {
-    display: block;
-}
-
-.dropdown {
-	float: right;
-margin-right: 5%;
-right: 0;
-padding-top: 1.5%;
-}
 
 #text {
     margin-left: 10%;
