--- a/pit/templates/kkb_form.html
+++ b/pit/templates/kkb_form.html
@@ -1,12 +1,17 @@
-<div class="modal-footer">
+{% load staticfiles %}
+<html>
+<head>
+       <link rel="stylesheet" href="{% static 'css/kkb.css' %}">
+</head>
+<body>
+<div class="content">
     <form name="SendOrder" method="POST">
         {% csrf_token %}
-        <div class="selectContainer">
-            <input type="submit" id="submit" class="form-control btn btn-default" value="Сделать донат">
-        </div>
-        <div id="login-error-div"
-             style="margin-bottom: 10px; text-align: center; color: red"></div>
-        Введите сумму для доната
-        <input type = "numeric" name="price" value = 1000>
+<div class="text">
+        Введите сумму для доната</div>
+        <center><input type = "numeric" name="price" value = 1000 class="price"><br></center>
+            <center><input type="submit" id="submit" class="sub" value="Сделать донат"></center>
     </form>
   </div>
+</body>
+</html>
