--- a/pit/templates/pit/hidden_pet.html
+++ b/pit/templates/pit/hidden_pet.html
@@ -1,40 +1,124 @@
 ﻿{% load staticfiles %}
 <html>
     <head>
+       <meta charset ="utf-8">
        <title>Main</title>
-       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-       <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css"> 
-       <link rel="stylesheet" href="{% static 'css/pit.css' %}">
-       <link
-      rel="stylesheet"
-      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
-       </head>
-    <body>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-<div class="page-header">
-    <h1><center>Pets<h3>{{ username }}</h3> </center></h1>
-{% if username == "" %}<a style="margin-right: 0;" class="btn btn-dark" href="{% url "login" %}" role="button" style="margin: 2em">Log in</a> {% endif %}
-{% if username != "" %}<a style="margin-right: 0;" class="btn btn-dark" href="{% url "logout" %}" role="button" style="margin: 2em">Log out</a> {% endif %}
-</div>
-<div class="main">
-<div style="display:flex; flex-wrap: wrap; flow-direction: row">
-{% for Pet in pets %}
-<div class="mdc-card  mdc-card--theme-dark demo-card demo-card--bg-demo" style="height: 350px; width: 400px; margin: 2em;
-    background-image: url({{ Pet.picture_1 }});
-    background-size:  cover;
-    background-repeat: no-repeat;
-    display: flex">
-            <section class="mdc-card__primary" style="background: rgba(0, 0, 0, .4);">
-              <h1 class="mdc-card__title mdc-card__title--large">{{ Pet.name }}<a href="{% url 'return_pet' pk=Pet.pk %}"class = "btn btn-success"><span class="glyphicon glyphicon-plus"></span>X</a>
-              <h2 class="mdc-card__subtitle">{{Pet.description}}</h2>
-            </section>
-            <section class="mdc-card__actions" style="background: rgba(0, 0, 0, .4); display: block;">
-              <a href="{% url 'morepet' pk=Pet.pk %}" class="mdc-button mdc-button--compact mdc-button--theme-dark mdc-card__action" style= "float: right"><font color="#D3D3D3"><strong>Подробнее</font></a>
-            </section>
-          </div>
-{% endfor %}
-</div>	
-    <a class="btn btn-dark" href="{% url "kzt_list" %}" role="button" style="margin: 2em">See transactions</a>
-</div>
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="{% static 'css/index.css' %}">
+	<link rel="stylesheet" href="{% static 'css/pet.css' %}">
+       <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+       <script src="{% static 'scripts/index.js' %}"></script>
+    </head>
+    <body>
+    <div class="sky" style="background-image: url({% static 'pictures/a.png' %})">
+    </div>
+    <div class="content">      
+	<div class="header">
+		<div class="header_content">
+			<a class="logo" href="/">Алматинский питомник<br> <div style="font-size: 70%">{{ username }}</div></a>
+		</div>
+		<div class="header_content">
+		</div>
+		<div class="header_content">
+			<div class="dropdown">
+				<a class="menu" href=#>
+                    			Животные
+                		</a>
+                		<a class="dMenu" href="{% url "pets" pet_type='dog' %}">
+                    			Собаки
+                		</a>
+                		<a class="dMenu" href="{% url "pets" pet_type='cat' %}">
+                    			Кошки
+                		</a>
+                		<a class="dMenu" href="{% url "pets" pet_type='other' %}">
+                    			Другие
+                		</a>  
+			</div>
+		</div>
+		<div class="header_content">
+			<a class="menu" href=#>
+                    		История транзакций
+                	</a>
+		</div>
+		<div class="header_content">
+			<a class="menu" href=# style="width: 50%; float: left; text-align: right;">
+                    		О нас | 
+                	</a>
+			{% if username == "" %}<a class="menu" data-toggle="modal" href="#myModal" style="width: 50%; float: left; text-align: left;" >| Логин</a>
+			{% endif %}
+                    		 
+			{% if username != "" %}<a class="menu" href="{% url "logout" %}" style="width: 50%; float: left; text-align: left;" >| Выйти</a>
+			{% endif %}
+		</div>
+	</div>
+	<div class="content_cards">
+
+                           {% for Pet in pets %}
+		<div class="kartochka" style="background-image: url({{ Pet.picture_1 }})">
+			<div class="kartochka_1"></div>
+			<div class="kartochka_2">
+				<div class="kartochka_name">{{ Pet.name }}</div>
+				<div class="kartochka_description">Порода: {{ Pet.breed }}</div>
+				<div class="kartochka_description">Пол: {{ Pet.gender }}</div>
+				<div class="kartochka_text">{{Pet.description}}</div>
+				<div class="kartochka_more">
+  {% if username != "" %}<a class="menu" style="font-size: 1.1vw; color: white; background-color: rgba(255, 77, 77, 0.5);" href="{% url 'return_pet' pk=Pet.pk %}">Вернуть</a>{% endif %}</div>
+				<div class="kartochka_more">
+			<a href="{% url 'morepet' pk=Pet.pk %}" class="menu" style="font-size: 1.1vw; color: white;">Подробнее...</a>
+				</div>
+			</div>
+		</div>
+		{% endfor %}
+  
+	</div>
+
+<div class ="footer_1">
+
+
+ {% for Pages in pages %}
+<a href="{{ Pages }}" style="float: left; margin-left: 4%;">{{ forloop.counter }}</a>
+ {% endfor %}</div>
+    </div>
+	
+
+
+   <!--  BOOTSTRAP LOGIN MODAL FORM  -->
+
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+
+      <!-- Modal content-->
+      <div class="modal-content" style="background-color: rgba(102, 163, 255, 0.9)">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 style="color:white;"><span class="glyphicon glyphicon-lock"></span> Login</h4>
+        </div>
+        <div class="modal-body">
+          <form role="form" method="POST" action="{% url 'login' %}">
+		{% csrf_token %}
+            <div class="form-group">
+              <label for="usrname"><span class="glyphicon glyphicon-user" ></span> Имя пользователя</label>
+              <input type="text" class="form-control" id="usrname" name="username" placeholder="Введите имя пользователя">
+            </div>
+            <div class="form-group">
+              <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Пароль</label>
+              <input type="password" class="form-control" id="psw" name="password" placeholder="Введите пароль">
+            </div>
+            <div class="checkbox">
+              <label><input type="checkbox" value="" checked>Запомнить</label>
+            </div>
+            <button type="submit" class="btn btn-default btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Войти</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div> 
+
     </body>
 </html>
