--- a/pit/templates/pit/index (copy).html
+++ b/pit/templates/pit/index (copy).html
@@ -10,7 +10,8 @@
 
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="{% static 'css/index.css' %}">
+
+       <link rel="stylesheet" href="{% static 'css/pit.css' %}">
        <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
        <script src="{% static 'scripts/index.js' %}"></script>
     </head>
@@ -18,65 +19,50 @@
     <div class="sky" style="background-image: url({% static 'pictures/b.png' %})">
     </div>
     <div id="donfr" onclick="x()"> <iframe class="ifr" frameborder="0" src = "{% url "kkb_init" %}"></iframe></div>
-    <div id="clientfr" onclick="closeClient()"> <iframe class="ifr2" frameborder="0" src = "{% url "client" %}"></iframe></div>
-    <div id="transfr" onclick="closeTrans()"> <iframe class="ifr4" frameborder="0" src = "{% url "kzt_list" %}"></iframe></div>
     <div class="content">      
-	<div class="header">
-		<div class="header_content">
-			<a class="logo" href="/">Алматинский питомник<br> <div style="font-size: 70%">{{ username }}</div></a>
-		</div>
-		<div class="header_content">
-			{% if username != "" %}<a class="menu" href="#" onclick="showClient()">Клиенты<div style="color: rgba(255, 0, 0, 0.8); font-size: 70%;">Непринятых заявок: {{ client_number }}</div></a> {% endif %}
-
-		</div>
-		<div class="header_content">
-			<div class="dropdown">
-				<a class="menu" href=#>
-                    			Животные
-                		</a>
-                		<a class="dMenu" href="{% url "pets" pet_type='dog' %}">
-                    			Собаки
-                		</a>
-                		<a class="dMenu" href="{% url "pets" pet_type='cat' %}">
-                    			Кошки
-                		</a>
-                		<a class="dMenu" href="{% url "pets" pet_type='other' %}">
-                    			Другие
-                		</a>   
-			</div>
-		</div>
-		<div class="header_content">
-			<a class="menu" href="#" onclick="showTrans()">
-                    		История транзакций
-                	</a>
-		</div>
-		<div class="header_content">
-			<a class="menu" href=# style="width: 50%; float: left; text-align: right;">
-                    		О нас | 
-                	</a>
-			{% if username == "" %}<a class="menu" data-toggle="modal" href="#myModal" style="width: 50%; float: left; text-align: left;" >| Логин</a>
-			{% endif %}
-                    		 
-			{% if username != "" %}<a class="menu" href="{% url "logout" %}" style="width: 50%; float: left; text-align: left;" >| Выйти</a>
-			{% endif %}
-                    		 
-                </div>
-	</div>
-	<div class="break">
-	</div>
-	<div class="content_body">
-		<div class="title">
-			Вас приветствует сайт питомника
-		</div>
-		<div class="break" style="height: 5%;">
-		</div>
-		<div class="text">
-			Здесь вы можете помочь и приютить бездомных животных.
-		</div>
-	</div>
-	<a class="donate" href="#" onclick="donate()">
-		Донат +
-	</a>
+            <a class="logo" href=#>
+                <b>Pit</b>
+                <br><font size="1px">{{ username }}</font>
+            </a>
+	    
+	{% if username == "" %}<a class="login" data-toggle="modal" href="#myModal">Login</a>{% endif %}
+           {% if username != "" %}<a class="login" href="{% url "logout" %}">
+                Выход
+            </a>{% endif %}
+<a class="contacts" href=#>
+                Контакты |
+            </a>
+            <a class="trans" href="{% url "kzt_list" %}">
+            История транзакций
+            </a>
+            
+           
+<div class="dropdown">
+                <a class="menu" href=#>
+                    Животные
+                </a>
+                <a class="dMenu" href="{% url "pets" pet_type='dog' %}">
+                    Собаки
+                </a>
+                <a class="dMenu" href="{% url "pets" pet_type='cat' %}">
+                    Кошки
+                </a>
+                <a class="dMenu" href="{% url "pets" pet_type='other' %}">
+                    Другие
+                </a>   
+           </div>
+        <div id="text">
+            <div id="title">
+                Вас приветствует сайт питомника
+            </div> 
+            <div id="maintext">
+                Здесь вы можете помочь и приютить бездомных животных.
+            </div>
+        </div>
+        
+        <a class="donate" href="#" onclick="donate()">
+            Донат +
+        </a>
     </div>	
 
 
